@@ -225,3 +225,5 @@ INCLUDESCHEMAINNAME.text=\u0052\u0065\u0073\u0070\u0065\u0063\u0074\u0020\u0064\
 INTELLIGENTLAYOUT.text=\u0049\u006e\u0074\u0065\u006c\u006c\u0069\u0067\u0065\u006e\u0074\u0020\u006c\u0061\u0079\u006f\u0075\u0074\u0020\u0028\u0042\u0045\u0054\u0041\u0029
 DELETENOTUSEDATTRIBUTES.text=\u0044\u006f\u0020\u0079\u006f\u0075\u0020\u0077\u0061\u006e\u0074\u0020\u0074\u006f\u0020\u0064\u0065\u006c\u0065\u0074\u0065\u0020\u0074\u0068\u0065\u0020\u006e\u006f\u0020\u006c\u006f\u006e\u0067\u0065\u0072\u0020\u0075\u0073\u0065\u0064\u0020\u0061\u0074\u0074\u0072\u0069\u0062\u0075\u0074\u0065\u0020\u007b\u0030\u007d\u0020\u006f\u0066\u0020\u0074\u0061\u0062\u006c\u0065\u0020\u007b\u0031\u007d\u003f
 AUTOMATICRELATIONATTRIBUTEPATTERN.text=\u004e\u0061\u006d\u0065\u0020\u006f\u0066\u0020\u006e\u0065\u0077\u0020\u0041\u0074\u0074\u0072\u0069\u0062\u0075\u0074\u0065\u0073\u0020\u0069\u006e\u0020\u0052\u0065\u006c\u0061\u0074\u0069\u006f\u006e\u0073
+DEFAULTFORONDELETE.text=\u0044\u0065\u0066\u0061\u0075\u006c\u0074\u0020\u0066\u006f\u0072\u0020\u004f\u004e\u0044\u0045\u004c\u0045\u0054\u0045
+DEFAULTFORONUPDATE.text=\u0044\u0065\u0066\u0061\u0075\u006c\u0074\u0020\u0066\u006f\u0072\u0020\u004f\u004e\u0055\u0050\u0044\u0041\u0054\u0045
